Add suppor for multiple domains in CORS